replace emptyFunction (dependendy removed) and added react-dom for DOM access

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "main": "lib/TextareaAutosize.js",
   "peerDependencies": {
-    "react": ">= 0.13.0 || ^0.14.0-alpha"
+    "react": ">= 0.13.0 || ^0.14.0-alpha",
+    "react-dom": "^0.14.0-alpha"
   },
   "repository": {
     "type": "git",
