--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "main": "lib/TextareaAutosize.js",
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-addons-update": "^0.14.0"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "react": "^0.14.0",
+    "react-addons-update": "^0.14.0",
     "babel": "^5.1.0",
     "babel-eslint": "^3.0.1",
     "eslint": "^0.19.0",
