--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-prometheusresearch": "^0.1.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.0",
     "eslint": "^2.7.0",
     "eslint-config-prometheusresearch": "^0.2.0",
-    "react": "^15.0.0"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {}
 }
