update size added

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "preversion": "npm run lint",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
-    "release:major": "npm version major && npm publish && git push --follow-tags"
+    "release:major": "npm version major && npm publish && git push --follow-tags",
+    "test": "jest"
   },
   "peerDependencies": {
     "react": ">=0.14.0 <17.0.0"
@@ -68,6 +69,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "jest": "^23.6.0",
     "prop-types": "^15.6.0"
   }
 }
