--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
   - "8.11.3"
+cache:
+  directories:
+    - "node_modules"
 install:
   - npm install
-script:
   - npm size
+
+
 
