--- a/package.json
+++ b/package.json
@@ -50,17 +50,17 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "bytes": "^3.0.0",
     "cross-env": "^5.0.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^4.12.0",
     "eslint-config-prometheusresearch": "^0.4.0",
     "eslint-plugin-react": "^7.5.1",
     "husky": "^1.0.1",
     "jest": "^23.6.0",
+    "jest-dom": "^2.1.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.13.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-testing-library": "^5.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.66.2",
     "rollup-plugin-babel": "^4.0.3",
