Tweak docs:build script

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "sideEffects": false,
   "files": ["dist"],
+  "targets": {
+    "example": {}
+  },
   "author": "Andrey Popp <8mayday@gmail.com> (httsps://andreypopp.com/)",
   "contributors": [
     "Mateusz Burzyński <mateuszburzynski@gmail.com> (https://github.com/Andarist)"
@@ -30,7 +33,7 @@
     "prebuild": "npm run clean",
     "build": "preconstruct build",
     "docs:dev": "parcel ./example/index.html --open",
-    "docs:build": "parcel build ./example/index.html --dist-dir ./example/dist --public-url .",
+    "docs:build": "parcel build ./example/index.html --dist-dir ./example/dist --public-url . --target example --no-minify",
     "docs:publish": "npm run docs:build && cd ./example/dist && git init && git commit --allow-empty -m 'update docs' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update docs' && git push git@github.com:Andarist/react-textarea-autosize gh-pages --force",
     "clean": "rimraf dist",
     "lint": "eslint --ext .js,.ts,.tsx src",
