--- a/package.json
+++ b/package.json
@@ -44,45 +44,45 @@
     "test:watch": "npm test -- --watch"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || 17.x"
+    "react": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.1",
-    "use-composed-ref": "^1.1.0",
-    "use-latest": "^1.2.0"
+    "@babel/runtime": "^7.10.2",
+    "use-composed-ref": "^1.0.0",
+    "use-latest": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@changesets/changelog-github": "^0.2.7",
-    "@changesets/cli": "^2.11.2",
-    "@preconstruct/cli": "^1.1.34",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@types/react": "^16.9.55",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@changesets/changelog-github": "^0.2.6",
+    "@changesets/cli": "^2.8.0",
+    "@preconstruct/cli": "^1.1.14",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.1.0",
+    "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "babel-eslint": "11.0.0-beta.2",
     "bytes": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0",
-    "jest": "^26.6.2",
-    "lint-staged": "^10.5.1",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.8",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
-    "terser": "^5.3.8",
-    "typescript": "^4.0.5"
+    "terser": "^4.7.0",
+    "typescript": "^3.9.3"
   },
   "engines": {
     "node": ">=10"
