--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "test:watch": "npm test -- --watch"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^19.0.0-rc"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.13",
