--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "parcel ./index.html --open",
-    "build": "parcel build ./index.html --dist-dir ./dist --public-url ."
+    "dev": "vite",
+    "build": "vite build"
   }
 }
