--- a/package.json
+++ b/package.json
@@ -76,12 +76,10 @@
     "Mateusz Burzyński <mateuszburzynski@gmail.com> (https://github.com/Andarist)"
   ],
   "scripts": {
-    "prebuild": "npm run clean",
     "build": "preconstruct build",
     "docs:dev": "npm run dev --prefix example",
     "docs:build": "npm run build --prefix example",
     "docs:publish": "npm run docs:build && cd ./example/dist && git init && git commit --allow-empty -m 'update docs' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update docs' && git push git@github.com:Andarist/react-textarea-autosize gh-pages --force",
-    "clean": "rimraf dist",
     "lint": "eslint --ext .js,.ts,.tsx src",
     "prepare": "npm run build",
     "changeset": "changeset",
@@ -110,10 +108,11 @@
     "@preconstruct/cli": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^10.4.9",
-    "@types/react": "^16.14.35",
-    "@types/react-dom": "^16.9.17",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-eslint": "11.0.0-beta.2",
     "bytes": "^3.1.0",
     "cross-env": "^7.0.2",
@@ -125,13 +124,12 @@
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "lint-staged": "^10.2.8",
-    "parcel": "2.0.0-nightly.454",
     "prettier": "^2.8.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "terser": "^4.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite": "^6.0.7"
   },
   "engines": {
     "node": ">=10"
