add edge-light export condition

--- a/package.json
+++ b/package.json
@@ -25,6 +25,26 @@
         "import": "./dist/react-textarea-autosize.cjs.mjs",
         "default": "./dist/react-textarea-autosize.cjs.js"
       },
+      "edge-light": {
+        "development": {
+          "workerd": {
+            "module": "./dist/react-textarea-autosize.development.workerd.esm.js",
+            "import": "./dist/react-textarea-autosize.development.workerd.cjs.mjs",
+            "default": "./dist/react-textarea-autosize.development.workerd.cjs.js"
+          },
+          "module": "./dist/react-textarea-autosize.development.edge-light.esm.js",
+          "import": "./dist/react-textarea-autosize.development.edge-light.cjs.mjs",
+          "default": "./dist/react-textarea-autosize.development.edge-light.cjs.js"
+        },
+        "workerd": {
+          "module": "./dist/react-textarea-autosize.workerd.esm.js",
+          "import": "./dist/react-textarea-autosize.workerd.cjs.mjs",
+          "default": "./dist/react-textarea-autosize.workerd.cjs.js"
+        },
+        "module": "./dist/react-textarea-autosize.edge-light.esm.js",
+        "import": "./dist/react-textarea-autosize.edge-light.cjs.mjs",
+        "default": "./dist/react-textarea-autosize.edge-light.cjs.js"
+      },
       "development": {
         "workerd": {
           "module": "./dist/react-textarea-autosize.development.workerd.esm.js",
@@ -69,6 +89,7 @@
   "imports": {
     "#is-browser": {
       "workerd": "./src/resolved-conditions/workerd.ts",
+      "edge-light": "./src/resolved-conditions/edge-light.ts",
       "worker": "./src/resolved-conditions/worker.ts",
       "browser": "./src/resolved-conditions/browser.ts",
       "default": "./src/resolved-conditions/node.ts"
