--- a/package.json
+++ b/package.json
@@ -25,36 +25,21 @@
         "import": "./dist/react-textarea-autosize.cjs.mjs",
         "default": "./dist/react-textarea-autosize.cjs.js"
       },
-      "edge-light": {
-        "development": {
-          "workerd": {
-            "module": "./dist/react-textarea-autosize.development.workerd.esm.js",
-            "import": "./dist/react-textarea-autosize.development.workerd.cjs.mjs",
-            "default": "./dist/react-textarea-autosize.development.workerd.cjs.js"
-          },
+      "development": {
+        "edge-light": {
+          "module": "./dist/react-textarea-autosize.development.edge-light.esm.js",
+          "import": "./dist/react-textarea-autosize.development.edge-light.cjs.mjs",
+          "default": "./dist/react-textarea-autosize.development.edge-light.cjs.js"
+        },
+        "worker": {
           "module": "./dist/react-textarea-autosize.development.edge-light.esm.js",
           "import": "./dist/react-textarea-autosize.development.edge-light.cjs.mjs",
           "default": "./dist/react-textarea-autosize.development.edge-light.cjs.js"
         },
         "workerd": {
-          "module": "./dist/react-textarea-autosize.workerd.esm.js",
-          "import": "./dist/react-textarea-autosize.workerd.cjs.mjs",
-          "default": "./dist/react-textarea-autosize.workerd.cjs.js"
-        },
-        "module": "./dist/react-textarea-autosize.edge-light.esm.js",
-        "import": "./dist/react-textarea-autosize.edge-light.cjs.mjs",
-        "default": "./dist/react-textarea-autosize.edge-light.cjs.js"
-      },
-      "development": {
-        "workerd": {
-          "module": "./dist/react-textarea-autosize.development.workerd.esm.js",
-          "import": "./dist/react-textarea-autosize.development.workerd.cjs.mjs",
-          "default": "./dist/react-textarea-autosize.development.workerd.cjs.js"
-        },
-        "worker": {
-          "module": "./dist/react-textarea-autosize.development.worker.esm.js",
-          "import": "./dist/react-textarea-autosize.development.worker.cjs.mjs",
-          "default": "./dist/react-textarea-autosize.development.worker.cjs.js"
+          "module": "./dist/react-textarea-autosize.development.edge-light.esm.js",
+          "import": "./dist/react-textarea-autosize.development.edge-light.cjs.mjs",
+          "default": "./dist/react-textarea-autosize.development.edge-light.cjs.js"
         },
         "browser": {
           "module": "./dist/react-textarea-autosize.browser.development.esm.js",
@@ -65,15 +50,20 @@
         "import": "./dist/react-textarea-autosize.development.cjs.mjs",
         "default": "./dist/react-textarea-autosize.development.cjs.js"
       },
-      "workerd": {
-        "module": "./dist/react-textarea-autosize.workerd.esm.js",
-        "import": "./dist/react-textarea-autosize.workerd.cjs.mjs",
-        "default": "./dist/react-textarea-autosize.workerd.cjs.js"
+      "edge-light": {
+        "module": "./dist/react-textarea-autosize.edge-light.esm.js",
+        "import": "./dist/react-textarea-autosize.edge-light.cjs.mjs",
+        "default": "./dist/react-textarea-autosize.edge-light.cjs.js"
       },
       "worker": {
-        "module": "./dist/react-textarea-autosize.worker.esm.js",
-        "import": "./dist/react-textarea-autosize.worker.cjs.mjs",
-        "default": "./dist/react-textarea-autosize.worker.cjs.js"
+        "module": "./dist/react-textarea-autosize.edge-light.esm.js",
+        "import": "./dist/react-textarea-autosize.edge-light.cjs.mjs",
+        "default": "./dist/react-textarea-autosize.edge-light.cjs.js"
+      },
+      "workerd": {
+        "module": "./dist/react-textarea-autosize.edge-light.esm.js",
+        "import": "./dist/react-textarea-autosize.edge-light.cjs.mjs",
+        "default": "./dist/react-textarea-autosize.edge-light.cjs.js"
       },
       "browser": {
         "module": "./dist/react-textarea-autosize.browser.esm.js",
@@ -87,16 +77,16 @@
     "./package.json": "./package.json"
   },
   "imports": {
-    "#is-browser": {
-      "workerd": "./src/resolved-conditions/workerd.ts",
-      "edge-light": "./src/resolved-conditions/edge-light.ts",
-      "worker": "./src/resolved-conditions/worker.ts",
-      "browser": "./src/resolved-conditions/browser.ts",
-      "default": "./src/resolved-conditions/node.ts"
-    },
     "#is-development": {
-      "development": "./src/resolved-conditions/development.ts",
-      "default": "./src/resolved-conditions/production.ts"
+      "development": "./src/conditions/true.ts",
+      "default": "./src/conditions/false.ts"
+    },
+    "#is-browser": {
+      "edge-light": "./src/conditions/false.ts",
+      "workerd": "./src/conditions/false.ts",
+      "worker": "./src/conditions/false.ts",
+      "browser": "./src/conditions/true.ts",
+      "default": "./src/conditions/is-browser.ts"
     }
   },
   "sideEffects": false,
